Adds the ability to track Launchpad, Jira, GitHub issues from the origin. Restructures the reports that use this data into multiple pages.
